# tests/integration/CMakeLists.txt

add_executable(test_minimal_server_flow test_minimal_server_flow.c)
target_link_libraries(test_minimal_server_flow PRIVATE micro_opcua micro_opcua_test_support unity)
add_test(NAME test_minimal_server_flow COMMAND test_minimal_server_flow)

add_executable(test_discovery_endpoint_no_session test_discovery_endpoint_no_session.c)
target_link_libraries(test_discovery_endpoint_no_session PRIVATE micro_opcua micro_opcua_test_support unity)
add_test(NAME test_discovery_endpoint_no_session COMMAND test_discovery_endpoint_no_session)

add_executable(test_single_client_limit test_single_client_limit.c)
target_link_libraries(test_single_client_limit PRIVATE micro_opcua micro_opcua_test_support unity)
add_test(NAME test_single_client_limit COMMAND test_single_client_limit)

add_executable(test_server_handshake test_server_handshake.c)
target_link_libraries(test_server_handshake PRIVATE micro_opcua micro_opcua_test_support unity)
add_test(NAME test_server_handshake COMMAND test_server_handshake)

add_executable(test_response_regression test_response_regression.c)
target_link_libraries(test_response_regression PRIVATE micro_opcua micro_opcua_test_support unity)
add_test(NAME test_response_regression COMMAND test_response_regression)

add_executable(test_server_framing test_server_framing.c)
target_link_libraries(test_server_framing PRIVATE micro_opcua micro_opcua_test_support unity)
add_test(NAME test_server_framing COMMAND test_server_framing)

add_executable(test_server_handshake_secure test_server_handshake_secure.c)
target_link_libraries(test_server_handshake_secure PRIVATE micro_opcua micro_opcua_test_support unity)
target_include_directories(test_server_handshake_secure PRIVATE ${CMAKE_SOURCE_DIR}/src)
add_test(NAME test_server_handshake_secure COMMAND test_server_handshake_secure)

add_executable(test_connection_robustness test_connection_robustness.c)
target_link_libraries(test_connection_robustness PRIVATE micro_opcua micro_opcua_test_support unity)
target_include_directories(test_connection_robustness PRIVATE ${CMAKE_SOURCE_DIR}/src)
add_test(NAME test_connection_robustness COMMAND test_connection_robustness)

add_executable(test_view_services test_view_services.c)
target_link_libraries(test_view_services PRIVATE micro_opcua micro_opcua_test_support unity)
target_include_directories(test_view_services PRIVATE ${CMAKE_SOURCE_DIR}/src)
add_test(NAME test_view_services COMMAND test_view_services)

add_executable(test_subscriptions test_subscriptions.c)
target_link_libraries(test_subscriptions PRIVATE micro_opcua micro_opcua_test_support unity)
target_include_directories(test_subscriptions PRIVATE ${CMAKE_SOURCE_DIR}/src)
add_test(NAME test_subscriptions COMMAND test_subscriptions)

add_executable(test_user_auth_plaintext test_user_auth_plaintext.c)
target_link_libraries(test_user_auth_plaintext PRIVATE micro_opcua micro_opcua_test_support unity)
target_include_directories(test_user_auth_plaintext PRIVATE ${CMAKE_SOURCE_DIR}/src)
add_test(NAME test_user_auth_plaintext COMMAND test_user_auth_plaintext)

add_executable(test_user_auth_encrypted test_user_auth_encrypted.c)
target_link_libraries(test_user_auth_encrypted PRIVATE micro_opcua micro_opcua_test_support unity)
target_include_directories(test_user_auth_encrypted PRIVATE ${CMAKE_SOURCE_DIR}/src)
add_test(NAME test_user_auth_encrypted COMMAND test_user_auth_encrypted)

add_executable(test_write_service test_write_service.c)
target_link_libraries(test_write_service PRIVATE micro_opcua micro_opcua_test_support unity)
target_include_directories(test_write_service PRIVATE ${CMAKE_SOURCE_DIR}/src)
add_test(NAME test_write_service COMMAND test_write_service)


